--- a/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
+++ b/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 65,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 66,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 67,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -46,112 +46,52 @@
           "output_type": "stream",
           "text": [
             "            Butanol\n",
-            "count  48064.000000\n",
-            "mean       9.785834\n",
-            "std       10.160568\n",
+            "count  56390.000000\n",
+            "mean       9.541880\n",
+            "std       10.186732\n",
             "min        0.000000\n",
-            "25%        3.832595\n",
-            "50%        5.908670\n",
-            "75%       10.990000\n",
-            "max       59.010000\n",
+            "25%        3.600000\n",
+            "50%        5.696670\n",
+            "75%       10.636700\n",
+            "max       58.353300\n",
             "         425_pct_Al       M_Value    C4_pct_Eth    C4_pct_H2O  \\\n",
-            "count  48064.000000  48064.000000  48064.000000  48064.000000   \n",
-            "mean       6.121527      3.598034      1.246364     21.103333   \n",
-            "std        0.310173      0.180238      0.720948      2.763381   \n",
-            "min        0.155707      1.346790      0.086632      7.823650   \n",
-            "25%        5.991420      3.500708      0.642266     18.737475   \n",
-            "50%        6.131130      3.590000      1.195790     21.332700   \n",
-            "75%        6.274265      3.688767      1.697302     23.248450   \n",
-            "max        8.058320      5.831770      9.844330     34.362400   \n",
+            "count  56390.000000  56390.000000  56390.000000  56390.000000   \n",
+            "mean       6.111432      3.604672      1.288456     20.731999   \n",
+            "std        0.320679      0.172808      0.705936      2.862064   \n",
+            "min        0.155707      1.460000      0.086632      7.823650   \n",
+            "25%        5.985243      3.507275      0.681256     18.311600   \n",
+            "50%        6.129620      3.596210      1.299630     20.677200   \n",
+            "75%        6.270160      3.696837      1.727693     22.973050   \n",
+            "max        8.058320      5.831770      9.089020     33.941500   \n",
             "\n",
             "       HydWtr_pct_Ammonia  \n",
-            "count        48064.000000  \n",
-            "mean             0.967209  \n",
-            "std              0.146912  \n",
-            "min              0.360178  \n",
-            "25%              0.875875  \n",
-            "50%              0.939325  \n",
-            "75%              1.030030  \n",
-            "max              1.617070  \n",
-            "           AYC55580       DI55102       DI55152       DI55580       FC42428  \\\n",
-            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
-            "mean      11.363177      0.938292      0.936531      0.998257  36151.561639   \n",
-            "std        4.850976      0.059909      0.034358      0.051217   5139.441714   \n",
-            "min       -3.055680      0.794118      0.824670      0.841696  17165.500000   \n",
-            "25%        9.775320      0.906156      0.913999      0.965028  34747.850000   \n",
-            "50%       10.805350      0.947357      0.935493      0.997964  37970.750000   \n",
-            "75%       13.970725      0.983124      0.955312      1.033820  39457.650000   \n",
-            "max       25.501300      1.059180      1.048640      1.140980  49959.600000   \n",
+            "count        56390.000000  \n",
+            "mean             0.968764  \n",
+            "std              0.145522  \n",
+            "min              0.382206  \n",
+            "25%              0.877101  \n",
+            "50%              0.942325  \n",
+            "75%              1.036227  \n",
+            "max              1.601090  \n",
+            "            DI55152       FC55003       FC55552       FC55569      FFC55553  \\\n",
+            "count  56390.000000  56390.000000  56390.000000  56390.000000  56390.000000   \n",
+            "mean       0.944869   5942.960010  36147.805685   6596.622988      0.993235   \n",
+            "std        0.043178    845.861842   4336.440435    373.930901      0.040359   \n",
+            "min        0.814830   2847.690000  18826.300000   5175.290000      0.811764   \n",
+            "25%        0.915581   5406.640000  35009.100000   6364.560000      0.969858   \n",
+            "50%        0.939644   5958.160000  37897.500000   6576.430000      0.991456   \n",
+            "75%        0.966906   6508.520000  38971.575000   6806.467500      1.012158   \n",
+            "max        1.065410   9042.150000  46356.900000   8057.390000      1.163840   \n",
             "\n",
-            "            FC55003       FC55009       FC55102       FC55152       FC55552  \\\n",
-            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
-            "mean    5952.978185    848.220753  44526.824994  40417.323864  36340.104550   \n",
-            "std      847.683897    610.037366   6168.162983   5459.963811   4275.391282   \n",
-            "min     2807.760000      0.000000  20368.700000  18860.700000  18558.800000   \n",
-            "25%     5424.630000    320.318250  41409.300000  38485.600000  35062.075000   \n",
-            "50%     5973.450000    834.348500  45887.700000  41477.500000  37960.000000   \n",
-            "75%     6522.630000   1323.710000  48543.450000  43732.800000  39017.500000   \n",
-            "max     9070.260000   2670.920000  62848.200000  57371.200000  52000.000000   \n",
-            "\n",
-            "            FC55555       FC55569       FC55576      FFC55553      FFC55555  \\\n",
-            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
-            "mean   28104.100489   6596.276391    380.872724      0.998268      0.773248   \n",
-            "std     3419.828722    362.422636    259.029411      0.036746      0.022350   \n",
-            "min    14012.100000   5145.140000      0.000000      0.815578      0.694477   \n",
-            "25%    27282.375000   6379.000000    203.479250      0.972384      0.759308   \n",
-            "50%    29231.100000   6577.465000    350.728000      0.997870      0.776544   \n",
-            "75%    30205.850000   6805.180000    565.299250      1.018792      0.789198   \n",
-            "max    34638.100000   8070.910000   1176.810000      1.170060      0.850961   \n",
-            "\n",
-            "           FYC55553       LC55553       LC55555       LC55557       LC55568  \\\n",
-            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
-            "mean   36234.197955     63.329273     57.081414     69.431922     41.143177   \n",
-            "std     4176.239735      7.156869     10.037618      2.810757      1.498108   \n",
-            "min    18110.900000     41.918300     27.970000     60.351700     32.192200   \n",
-            "25%    34881.850000     59.578950     47.263450     67.117900     40.742375   \n",
-            "50%    37538.800000     65.397850     59.943700     70.031500     41.234850   \n",
-            "75%    38838.475000     68.206550     65.086750     71.619725     41.599000   \n",
-            "max    46156.700000     82.753500     79.033400     78.119700     49.420800   \n",
-            "\n",
-            "            LC90366       LC90368       PI55004       PI55020       PI55560  \\\n",
-            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
-            "mean      46.508861     37.532827      2.183574     -1.523616      0.978657   \n",
-            "std       28.725663     20.215792      1.166487      1.116584      0.991547   \n",
-            "min        0.000000      0.006367      0.001366     -4.856830     -2.094890   \n",
-            "25%       22.035575     21.661050      1.262065     -2.386153      0.206120   \n",
-            "50%       48.833400     43.461900      1.922580     -1.532940      0.746700   \n",
-            "75%       76.796700     52.770625      2.940780     -0.512644      1.657118   \n",
-            "max       87.901600     81.210800      6.299380      1.983020      4.467930   \n",
-            "\n",
-            "            TC55552       TC55553       TC55555       TC55566       TI40050  \\\n",
-            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
-            "mean     168.616937    181.290465    181.008748    197.163834     73.315504   \n",
-            "std       15.352568     28.041787      1.515823     12.953080     15.320339   \n",
-            "min      119.683000    110.534000    175.746000    156.727000     27.200000   \n",
-            "25%      155.332000    161.451000    179.965000    185.858000     62.505400   \n",
-            "50%      172.531000    175.799000    180.125000    200.039000     76.556250   \n",
-            "75%      180.858250    196.687250    182.027000    205.077000     84.896025   \n",
-            "max      202.625000    246.047000    186.584000    227.835000    118.700000   \n",
-            "\n",
-            "            TI52014       TI55013       TI55014       TI55015       TI55016  \\\n",
-            "count  48064.000000  48064.000000  48064.000000  48064.000000  48064.000000   \n",
-            "mean     129.077874    200.789109    197.065824    194.719423    190.094731   \n",
-            "std       11.973351     17.680867     13.726206     13.604169      9.159624   \n",
-            "min       91.769900    161.963000    167.953000    161.407000    164.278000   \n",
-            "25%      120.655750    186.294250    186.099750    184.028750    182.823750   \n",
-            "50%      129.614500    199.092000    195.789000    193.494500    189.006000   \n",
-            "75%      138.056250    210.519000    204.229250    202.010250    194.924000   \n",
-            "max      163.594000    241.383000    228.072000    227.543000    213.986000   \n",
-            "\n",
-            "            TI55017       TI55021       TI55023  \n",
-            "count  48064.000000  48064.000000  48064.000000  \n",
-            "mean     186.024059    223.081652    218.300526  \n",
-            "std        9.817368      9.611556      3.614977  \n",
-            "min      159.678000    207.365000    206.266000  \n",
-            "25%      178.739750    217.585000    215.524000  \n",
-            "50%      185.013000    220.385000    217.590000  \n",
-            "75%      191.763500    223.934000    220.830000  \n",
-            "max      211.356000    257.805000    231.161000  \n"
+            "           FFC55555       LC55555       PI55004       TC55552       TI55021  \n",
+            "count  56390.000000  56390.000000  56390.000000  56390.000000  56390.000000  \n",
+            "mean       0.774740     58.800001      2.277128    168.524582    223.213627  \n",
+            "std        0.023286     10.631938      1.210374     15.046680      8.998408  \n",
+            "min        0.694477     27.970000      0.000000    120.198000    203.373000  \n",
+            "25%        0.759744     49.874850      1.311962    156.063000    217.874000  \n",
+            "50%        0.778625     60.148350      2.036770    171.990000    220.935500  \n",
+            "75%        0.790205     67.931700      3.065625    180.628750    224.772000  \n",
+            "max        0.855754     86.581300      6.325910    213.521000    256.593000  \n"
           ]
         }
       ],
@@ -163,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [
         {
@@ -184,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -195,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [
         {
@@ -216,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [
         {
@@ -224,13 +164,8 @@
           "output_type": "stream",
           "text": [
             "Index(['Date', 'Butanol'], dtype='object')\n",
-            "Index(['Date', 'AYC55580', 'DI55102', 'DI55152', 'DI55580', 'FC42428',\n",
-            "       'FC55003', 'FC55009', 'FC55102', 'FC55152', 'FC55552', 'FC55555',\n",
-            "       'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'FYC55553', 'LC55553',\n",
-            "       'LC55555', 'LC55557', 'LC55568', 'LC90366', 'LC90368', 'PI55004',\n",
-            "       'PI55020', 'PI55560', 'TC55552', 'TC55553', 'TC55555', 'TC55566',\n",
-            "       'TI40050', 'TI52014', 'TI55013', 'TI55014', 'TI55015', 'TI55016',\n",
-            "       'TI55017', 'TI55021', 'TI55023'],\n",
+            "Index(['Date', 'DI55152', 'FC55003', 'FC55552', 'FC55569', 'FFC55553',\n",
+            "       'FFC55555', 'LC55555', 'PI55004', 'TC55552', 'TI55021'],\n",
             "      dtype='object')\n",
             "Index(['Date', '425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
             "       'HydWtr_pct_Ammonia'],\n",
@@ -246,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 72,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -267,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -295,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -314,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 75,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -347,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [
         {
@@ -369,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -381,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [
         {
@@ -486,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 79,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -496,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 80,
       "metadata": {},
       "outputs": [],
       "source": [
