--- a/3 Feature Selection/1.0.1 OLS_contData.ipynb
+++ b/3 Feature Selection/1.0.1 OLS_contData.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 52,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,40 +31,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "   425_pct_Al  M_Value  C4_pct_Eth  C4_pct_H2O  C4_pct_Hex  \\\n",
-            "0    6.307630  3.50893    2.508420    21.96340    0.659256   \n",
-            "1    6.308335  3.50863    2.511135    21.96865    0.659930   \n",
-            "2    6.309390  3.50818    2.515210    21.97655    0.660942   \n",
-            "3    6.310090  3.50788    2.517925    21.98185    0.661616   \n",
-            "4    6.310790  3.50758    2.520640    21.98715    0.662291   \n",
+            "   425_pct_Al  M_Value  C4_pct_Eth  C4_pct_H2O  HydWtr_pct_Ammonia   DI55152  \\\n",
+            "0    6.307630  3.50893    2.508420    21.96340            0.908765  0.925255   \n",
+            "1    6.308335  3.50863    2.511135    21.96865            0.907643  0.924281   \n",
+            "2    6.309390  3.50818    2.515210    21.97655            0.905959  0.923773   \n",
+            "3    6.310090  3.50788    2.517925    21.98185            0.904837  0.924103   \n",
+            "4    6.310790  3.50758    2.520640    21.98715            0.903715  0.924258   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  HydWtr_Na2O   DI55152   FC55003       FC55552  \\\n",
-            "0            0.908765     2.712180  0.925255  4919.290  41564.100000   \n",
-            "1            0.907643     2.805415  0.924281  5039.445  41558.250000   \n",
-            "2            0.905959     2.945270  0.923773  5268.620  41524.066667   \n",
-            "3            0.904837     3.038505  0.924103  5349.320  41500.275000   \n",
-            "4            0.903715     3.131740  0.924258  5563.165  41466.625000   \n",
+            "    FC55003       FC55552      FC55569  FFC55553  FFC55555    LC55555  \\\n",
+            "0  4919.290  41564.100000  6918.110000  0.996975  0.751501  59.968800   \n",
+            "1  5039.445  41558.250000  6919.960000  0.998847  0.750588  59.932300   \n",
+            "2  5268.620  41524.066667  6916.486667  0.998648  0.750505  60.002433   \n",
+            "3  5349.320  41500.275000  6918.470000  1.000349  0.750325  60.015925   \n",
+            "4  5563.165  41466.625000  6915.790000  1.000862  0.750021  60.020500   \n",
             "\n",
-            "       FC55569  FFC55553  FFC55555    LC55555   PI55004   TC55552     TC55555  \\\n",
-            "0  6918.110000  0.996975  0.751501  59.968800  1.306310  177.1880  180.125000   \n",
-            "1  6919.960000  0.998847  0.750588  59.932300  1.181220  177.2505  180.053000   \n",
-            "2  6916.486667  0.998648  0.750505  60.002433  1.216603  177.4170  180.001667   \n",
-            "3  6918.470000  1.000349  0.750325  60.015925  1.206718  177.4590  180.010750   \n",
-            "4  6915.790000  1.000862  0.750021  60.020500  1.163892  177.5490  179.939500   \n",
-            "\n",
-            "      TI55021    Butanol  \n",
-            "0  212.861000  54.858300  \n",
-            "1  212.699000  51.190050  \n",
-            "2  212.822333  48.744567  \n",
-            "3  212.799750  46.604750  \n",
-            "4  212.853000  44.587220  \n"
+            "    PI55004   TC55552     TI55021    Butanol  \n",
+            "0  1.306310  177.1880  212.861000  54.858300  \n",
+            "1  1.181220  177.2505  212.699000  51.190050  \n",
+            "2  1.216603  177.4170  212.822333  48.744567  \n",
+            "3  1.206718  177.4590  212.799750  46.604750  \n",
+            "4  1.163892  177.5490  212.853000  44.587220  \n"
           ]
         }
       ],
@@ -79,20 +72,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
-              "       'HydWtr_pct_Ammonia', 'HydWtr_Na2O', 'DI55152', 'FC55003', 'FC55552',\n",
-              "       'FC55569', 'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552',\n",
-              "       'TC55555', 'TI55021', 'Butanol'],\n",
+              "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+              "       'HydWtr_pct_Ammonia', 'DI55152', 'FC55003', 'FC55552', 'FC55569',\n",
+              "       'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552', 'TI55021',\n",
+              "       'Butanol'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 55,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -103,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 56,
       "metadata": {
         "trusted": true
       },
@@ -115,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -132,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -148,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -165,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -178,20 +171,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
-              "       'HydWtr_pct_Ammonia', 'HydWtr_Na2O', 'DI55152', 'FC55003', 'FC55552',\n",
-              "       'FC55569', 'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552',\n",
-              "       'TC55555', 'TI55021', 'Butanol'],\n",
+              "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+              "       'HydWtr_pct_Ammonia', 'DI55152', 'FC55003', 'FC55552', 'FC55569',\n",
+              "       'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552', 'TI55021',\n",
+              "       'Butanol'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 46,
+          "execution_count": 61,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -202,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -214,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [
         {
@@ -223,47 +216,44 @@
           "text": [
             "                                 OLS Regression Results                                \n",
             "=======================================================================================\n",
-            "Dep. Variable:                Butanol   R-squared (uncentered):                   0.573\n",
-            "Model:                            OLS   Adj. R-squared (uncentered):              0.573\n",
-            "Method:                 Least Squares   F-statistic:                              4084.\n",
-            "Date:                Sat, 02 Dec 2023   Prob (F-statistic):                        0.00\n",
-            "Time:                        21:34:05   Log-Likelihood:                     -1.9605e+05\n",
-            "No. Observations:               54701   AIC:                                  3.921e+05\n",
-            "Df Residuals:                   54683   BIC:                                  3.923e+05\n",
-            "Df Model:                          18                                                  \n",
+            "Dep. Variable:                Butanol   R-squared (uncentered):                   0.565\n",
+            "Model:                            OLS   Adj. R-squared (uncentered):              0.565\n",
+            "Method:                 Least Squares   F-statistic:                              4877.\n",
+            "Date:                Sun, 03 Dec 2023   Prob (F-statistic):                        0.00\n",
+            "Time:                        19:33:51   Log-Likelihood:                     -2.0304e+05\n",
+            "No. Observations:               56390   AIC:                                  4.061e+05\n",
+            "Df Residuals:                   56375   BIC:                                  4.063e+05\n",
+            "Df Model:                          15                                                  \n",
             "Covariance Type:            nonrobust                                                  \n",
             "======================================================================================\n",
             "                         coef    std err          t      P>|t|      [0.025      0.975]\n",
             "--------------------------------------------------------------------------------------\n",
-            "425_pct_Al            -0.2725      0.125     -2.182      0.029      -0.517      -0.028\n",
-            "M_Value               -1.9299      0.237     -8.158      0.000      -2.394      -1.466\n",
-            "C4_pct_Eth            -0.3853      0.078     -4.969      0.000      -0.537      -0.233\n",
-            "C4_pct_H2O             0.3113      0.017     17.978      0.000       0.277       0.345\n",
-            "C4_pct_Hex            -2.1298      0.171    -12.442      0.000      -2.465      -1.794\n",
-            "HydWtr_pct_Ammonia     0.1330      0.266      0.500      0.617      -0.388       0.654\n",
-            "HydWtr_Na2O           -0.7432      0.051    -14.436      0.000      -0.844      -0.642\n",
-            "DI55152                9.9540      1.230      8.095      0.000       7.544      12.364\n",
-            "FC55003               -0.0011   5.72e-05    -19.802      0.000      -0.001      -0.001\n",
-            "FC55552                0.0005   9.66e-06     46.740      0.000       0.000       0.000\n",
-            "FC55569               -0.0038      0.000    -33.048      0.000      -0.004      -0.004\n",
-            "FFC55553              27.9641      1.039     26.912      0.000      25.927      30.001\n",
-            "FFC55555             -57.5995      1.788    -32.206      0.000     -61.105     -54.094\n",
-            "LC55555                0.0455      0.005      9.045      0.000       0.036       0.055\n",
-            "PI55004                0.2176      0.037      5.831      0.000       0.144       0.291\n",
-            "TC55552                0.0530      0.003     19.503      0.000       0.048       0.058\n",
-            "TC55555                0.3016      0.014     21.800      0.000       0.275       0.329\n",
-            "TI55021               -0.1358      0.005    -26.082      0.000      -0.146      -0.126\n",
+            "425_pct_Al             0.3950      0.113      3.482      0.000       0.173       0.617\n",
+            "M_Value                0.6513      0.221      2.947      0.003       0.218       1.084\n",
+            "C4_pct_Eth            -0.7149      0.072     -9.996      0.000      -0.855      -0.575\n",
+            "C4_pct_H2O             0.3801      0.017     22.425      0.000       0.347       0.413\n",
+            "HydWtr_pct_Ammonia     0.8714      0.264      3.303      0.001       0.354       1.388\n",
+            "DI55152               17.3680      1.196     14.517      0.000      15.023      19.713\n",
+            "FC55003               -0.0010   5.63e-05    -18.322      0.000      -0.001      -0.001\n",
+            "FC55552                0.0005   9.34e-06     50.908      0.000       0.000       0.000\n",
+            "FC55569               -0.0036      0.000    -31.790      0.000      -0.004      -0.003\n",
+            "FFC55553              35.3143      0.973     36.292      0.000      33.407      37.221\n",
+            "FFC55555             -43.2244      1.640    -26.360      0.000     -46.438     -40.010\n",
+            "LC55555                0.0350      0.005      7.130      0.000       0.025       0.045\n",
+            "PI55004                0.3432      0.037      9.220      0.000       0.270       0.416\n",
+            "TC55552                0.0514      0.003     19.212      0.000       0.046       0.057\n",
+            "TI55021               -0.0884      0.005    -18.072      0.000      -0.098      -0.079\n",
             "==============================================================================\n",
-            "Omnibus:                    21306.228   Durbin-Watson:                   0.017\n",
-            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            77034.496\n",
-            "Skew:                           1.994   Prob(JB):                         0.00\n",
-            "Kurtosis:                       7.231   Cond. No.                     1.89e+06\n",
+            "Omnibus:                    21324.678   Durbin-Watson:                   0.017\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            73742.874\n",
+            "Skew:                           1.950   Prob(JB):                         0.00\n",
+            "Kurtosis:                       7.022   Cond. No.                     1.83e+06\n",
             "==============================================================================\n",
             "\n",
             "Notes:\n",
             "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
             "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-            "[3] The condition number is large, 1.89e+06. This might indicate that there are\n",
+            "[3] The condition number is large, 1.83e+06. This might indicate that there are\n",
             "strong multicollinearity or other numerical problems.\n"
           ]
         }
@@ -280,14 +270,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['HydWtr_pct_Ammonia']\n"
+            "[]\n"
           ]
         }
       ],
@@ -311,15 +301,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                        coef  std err    t  P>|t|  [0.025  0.975]\n",
-            "5  HydWtr_pct_Ammonia  0.133    0.266  0.5  0.617  -0.388   0.654\n"
+            "Empty DataFrame\n",
+            "Columns: [, coef, std err, t, P>|t|, [0.025, 0.975]]\n",
+            "Index: []\n"
           ]
         }
       ],
@@ -329,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [
         {
@@ -338,7 +329,7 @@
           "text": [
             "\n",
             "Significant Features:\n",
-            "['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex', 'HydWtr_Na2O', 'DI55152', 'FC55003', 'FC55569', 'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552', 'TC55555', 'TI55021']\n"
+            "['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia', 'DI55152', 'FC55003', 'FC55569', 'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552', 'TI55021']\n"
           ]
         }
       ],
