--- a/3 Feature Selection/1.0.2 SFS_contData.ipynb
+++ b/3 Feature Selection/1.0.2 SFS_contData.ipynb
@@ -51,33 +51,26 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "   425_pct_Al  M_Value  C4_pct_Eth  C4_pct_H2O  C4_pct_Hex  \\\n",
-            "0    6.307630  3.50893    2.508420    21.96340    0.659256   \n",
-            "1    6.308335  3.50863    2.511135    21.96865    0.659930   \n",
-            "2    6.309390  3.50818    2.515210    21.97655    0.660942   \n",
-            "3    6.310090  3.50788    2.517925    21.98185    0.661616   \n",
-            "4    6.310790  3.50758    2.520640    21.98715    0.662291   \n",
+            "   425_pct_Al  M_Value  C4_pct_Eth  C4_pct_H2O  HydWtr_pct_Ammonia   DI55152  \\\n",
+            "0    6.307630  3.50893    2.508420    21.96340            0.908765  0.925255   \n",
+            "1    6.308335  3.50863    2.511135    21.96865            0.907643  0.924281   \n",
+            "2    6.309390  3.50818    2.515210    21.97655            0.905959  0.923773   \n",
+            "3    6.310090  3.50788    2.517925    21.98185            0.904837  0.924103   \n",
+            "4    6.310790  3.50758    2.520640    21.98715            0.903715  0.924258   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  HydWtr_Na2O   DI55152   FC55003       FC55552  \\\n",
-            "0            0.908765     2.712180  0.925255  4919.290  41564.100000   \n",
-            "1            0.907643     2.805415  0.924281  5039.445  41558.250000   \n",
-            "2            0.905959     2.945270  0.923773  5268.620  41524.066667   \n",
-            "3            0.904837     3.038505  0.924103  5349.320  41500.275000   \n",
-            "4            0.903715     3.131740  0.924258  5563.165  41466.625000   \n",
+            "    FC55003       FC55552      FC55569  FFC55553  FFC55555    LC55555  \\\n",
+            "0  4919.290  41564.100000  6918.110000  0.996975  0.751501  59.968800   \n",
+            "1  5039.445  41558.250000  6919.960000  0.998847  0.750588  59.932300   \n",
+            "2  5268.620  41524.066667  6916.486667  0.998648  0.750505  60.002433   \n",
+            "3  5349.320  41500.275000  6918.470000  1.000349  0.750325  60.015925   \n",
+            "4  5563.165  41466.625000  6915.790000  1.000862  0.750021  60.020500   \n",
             "\n",
-            "       FC55569  FFC55553  FFC55555    LC55555   PI55004   TC55552     TC55555  \\\n",
-            "0  6918.110000  0.996975  0.751501  59.968800  1.306310  177.1880  180.125000   \n",
-            "1  6919.960000  0.998847  0.750588  59.932300  1.181220  177.2505  180.053000   \n",
-            "2  6916.486667  0.998648  0.750505  60.002433  1.216603  177.4170  180.001667   \n",
-            "3  6918.470000  1.000349  0.750325  60.015925  1.206718  177.4590  180.010750   \n",
-            "4  6915.790000  1.000862  0.750021  60.020500  1.163892  177.5490  179.939500   \n",
-            "\n",
-            "      TI55021    Butanol  \n",
-            "0  212.861000  54.858300  \n",
-            "1  212.699000  51.190050  \n",
-            "2  212.822333  48.744567  \n",
-            "3  212.799750  46.604750  \n",
-            "4  212.853000  44.587220  \n"
+            "    PI55004   TC55552     TI55021    Butanol  \n",
+            "0  1.306310  177.1880  212.861000  54.858300  \n",
+            "1  1.181220  177.2505  212.699000  51.190050  \n",
+            "2  1.216603  177.4170  212.822333  48.744567  \n",
+            "3  1.206718  177.4590  212.799750  46.604750  \n",
+            "4  1.163892  177.5490  212.853000  44.587220  \n"
           ]
         }
       ],
@@ -131,10 +124,10 @@
         {
           "data": {
             "text/plain": [
-              "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
-              "       'HydWtr_pct_Ammonia', 'HydWtr_Na2O', 'DI55152', 'FC55003', 'FC55552',\n",
-              "       'FC55569', 'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552',\n",
-              "       'TC55555', 'TI55021', 'Butanol'],\n",
+              "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+              "       'HydWtr_pct_Ammonia', 'DI55152', 'FC55003', 'FC55552', 'FC55569',\n",
+              "       'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552', 'TI55021',\n",
+              "       'Butanol'],\n",
               "      dtype='object')"
             ]
           },
@@ -199,32 +192,29 @@
           "output_type": "stream",
           "text": [
             "Selected Features:\n",
-            "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
-            "       'HydWtr_Na2O', 'DI55152', 'FC55003', 'FC55552', 'FC55569', 'FFC55553',\n",
-            "       'FFC55555', 'LC55555', 'PI55004', 'TC55552', 'TC55555', 'TI55021'],\n",
+            "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'DI55152',\n",
+            "       'FC55003', 'FC55552', 'FC55569', 'FFC55553', 'FFC55555', 'LC55555',\n",
+            "       'PI55004', 'TC55552', 'TI55021'],\n",
             "      dtype='object')\n",
             "\n",
             "Model Coefficients:\n",
-            "425_pct_Al: 0.24241357844598496\n",
-            "M_Value: -1.3614677752608468\n",
-            "C4_pct_Eth: -0.5679399700555137\n",
-            "C4_pct_H2O: 0.38547905606320193\n",
-            "C4_pct_Hex: -2.3029961886607415\n",
-            "HydWtr_Na2O: -0.6319778947478415\n",
-            "DI55152: 16.27794384832723\n",
-            "FC55003: -0.0011796168184368978\n",
-            "FC55552: 0.0004517492207993062\n",
-            "FC55569: -0.00343546336845222\n",
-            "FFC55553: 31.67255745457808\n",
-            "FFC55555: -53.06691692221332\n",
-            "LC55555: 0.037291351392160436\n",
-            "PI55004: 0.22898638978286537\n",
-            "TC55552: 0.05414439399315018\n",
-            "TC55555: 0.8580650369730227\n",
-            "TI55021: -0.15171046358218665\n",
+            "425_pct_Al: -0.29413171840183144\n",
+            "M_Value: -0.5775288879561625\n",
+            "C4_pct_Eth: -0.6327316637626352\n",
+            "C4_pct_H2O: 0.3120305396844868\n",
+            "DI55152: 10.676830903263683\n",
+            "FC55003: -0.0011093770818439124\n",
+            "FC55552: 0.0004528184124492764\n",
+            "FC55569: -0.003776945933543135\n",
+            "FFC55553: 30.693665727497528\n",
+            "FFC55555: -50.94809180374684\n",
+            "LC55555: 0.04595258426793167\n",
+            "PI55004: 0.2887185699226437\n",
+            "TC55552: 0.04666535199570244\n",
+            "TI55021: -0.09995652449977958\n",
             "\n",
-            "R-squared on Training Set: 0.1446555029457367\n",
-            "R-squared on Test Set: 0.1437920050852457\n"
+            "R-squared on Training Set: 0.12374620762809707\n",
+            "R-squared on Test Set: 0.12121759141147848\n"
           ]
         }
       ],
