--- a/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
+++ b/1 Preprocess/Merge Data/1.1.1 IM - Create Dataset.ipynb
@@ -2,7 +2,34 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: statsmodels in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (0.14.1)\n",
+            "Requirement already satisfied: numpy<2,>=1.18 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (1.26.2)\n",
+            "Requirement already satisfied: scipy!=1.9.2,>=1.4 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (1.11.4)\n",
+            "Requirement already satisfied: pandas!=2.1.0,>=1.0 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (2.1.4)\n",
+            "Requirement already satisfied: patsy>=0.5.4 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (0.5.4)\n",
+            "Requirement already satisfied: packaging>=21.3 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from statsmodels) (23.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from pandas!=2.1.0,>=1.0->statsmodels) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from pandas!=2.1.0,>=1.0->statsmodels) (2023.3.post1)\n",
+            "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from pandas!=2.1.0,>=1.0->statsmodels) (2023.3)\n",
+            "Requirement already satisfied: six in c:\\users\\steve\\onedrive\\1. baiutek\\project-optic4\\.venv\\lib\\site-packages (from patsy>=0.5.4->statsmodels) (1.16.0)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
+      "source": [
+        "%pip install statsmodels"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -19,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -28,14 +55,14 @@
       "source": [
         "\n",
         "# Importing CSV files\n",
-        "df_CDunit = pd.read_csv(r\"C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Continuous Data\\cont_554Data_clean.csv\")\n",
-        "df_AlCon = pd.read_csv(r\"C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Continuous Data\\cont_425Data_clean.csv\")\n",
-        "df_FB554 = pd.read_csv(r\"C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Continuous Data\\cont_unitData_clean.csv\")\n"
+        "df_CDunit = pd.read_csv(r\"C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\1 Preprocess\\Continuous Data\\cont_554Data_clean.csv\")\n",
+        "df_AlCon = pd.read_csv(r\"C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\1 Preprocess\\Continuous Data\\cont_425Data_clean.csv\")\n",
+        "df_FB554 = pd.read_csv(r\"C:\\Users\\steve\\OneDrive\\1. BAIUTEK\\Project-OptiC4\\1 Preprocess\\Continuous Data\\cont_unitData_clean.csv\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 3,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -103,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -124,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -135,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -156,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -181,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -202,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -230,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -249,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -282,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -304,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -316,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -330,8 +357,8 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\saust\\AppData\\Local\\Temp\\ipykernel_113672\\2705700377.py:73: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-            "  results = results.append(iteration_results, ignore_index=True)\n"
+            "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_18284\\1964144134.py:78: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "  results = pd.concat([results, iteration_results_df], ignore_index=True)\n"
           ]
         }
       ],
@@ -408,7 +435,15 @@
         "                            'F-statistic': model.fvalue,\n",
         "                            'Prob (F-statistic)': model.f_pvalue\n",
         "                        }\n",
-        "                        results = results.append(iteration_results, ignore_index=True)\n",
+        "                        \n",
+        "                        # Convert the dictionary to a DataFrame\n",
+        "                        iteration_results_df = pd.DataFrame([iteration_results])\n",
+        "                        \n",
+        "                        # Concatenate it with the existing DataFrame, wrap iteration_results_df in a list\n",
+        "                        results = pd.concat([results, iteration_results_df], ignore_index=True)\n",
+        "                        # results = pd.concat(iteration_results_df, ignore_index=True)\n",
+        "                        \n",
+        "                        # results = pd.concat(iteration_results, ignore_index=True)\n",
         "\n",
         "                        # Print only the iteration count\n",
         "                        print(f\"Iteration: {iteration_count}\")\n",
@@ -421,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -431,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -496,7 +531,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.9"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
